--- a/greeting.html
+++ b/greeting.html
@@ -22,7 +22,7 @@
           }
         }
 
-        reactDOM.render(
+        ReactDOM.render(
           <Greeting />, document.getElementById('app')
         );
     </script>
