make new component from scratch

--- a/greeting.html
+++ b/greeting.html
@@ -17,6 +17,7 @@
             return (
               <div>
                 <h1>Hello World!</h1>
+                <h4>This is going to be crazy!</h4>
               </div>
             );
           }
