--- a/greeting.html
+++ b/greeting.html
@@ -16,15 +16,14 @@
           render() {
             return (
               <div>
-                <h1>Hello World!</h1>
-                <h4>This is going to be crazy!</h4>
+                <h1>Hello {this.props.name}!</h1>
               </div>
             );
           }
         }
 
         ReactDOM.render(
-          <Greeting />, document.getElementById('app')
+          <Greeting name="Bloc Student"/>, document.getElementById('app')
         );
     </script>
   </body>
