--- a/practice.html
+++ b/practice.html
@@ -2,29 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My First React App</title>
+    <title>Practice Time</title>
   </head>
-  
+
   <body>
-    <div id="app"></div>
+    <div id='app'><div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 
     <script type="text/babel">
-        class Greeting extends React.Component {
-          render() {
-            return (
-              <div>
-                <h1>Hello {this.props.name}!</h1>
-              </div>
-            );
-          }
+       class Stuff extends React.Component {
+        render() {
+          return  (
+            <div>
+              <h1> What up {this.props.name}! </h1>
+            </div>
+          );
         }
+      }
 
-        ReactDOM.render(
-          <Greeting name="Bloc Student"/>, document.getElementById('app')
-        );
+      ReactDOM.render(
+        <Stuff name="fam"/>, document.getElementById('app')
+      );
+
     </script>
   </body>
 </html>
